color play, font fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Navbar (sit on top) -->
     <div class="w3-top w3-hide-small">
-        <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
+        <div class="w3-bar w3-xlarge w3-yellow w3-opacity w3-hover-opacity-off" id="myNavbar">
             <a href="#" class="w3-bar-item w3-button">INICIO</a>
             <a href="#menu" class="w3-bar-item w3-button">MENU</a>
             <a href="#about" class="w3-bar-item w3-button">NOSOTROS</a>
@@ -59,16 +59,16 @@
             <span class="w3-tag w3-xlarge texto">Horarios de Atencion: 10am a 12pm. Lunes descansamos!</span>
         </div>
         <div class="w3-display-middle w3-center">
-            <span class="w3-text-white w3-hide-small"
-                style="font-size:100px; background-color: red;">POLLO<br>FONO</span>
+            <span class="w3-text-white w3-hide-small w3-red"
+                style="font-size:100px;;">POLLO<br>FONO</span>
             <span class="w3-text-white w3-hide-large w3-hide-medium"
-                style="font-size:60px; background-color: red;"><b>POLLO<br>FONO</b></span>
+                style="font-size:60px"><b>POLLO<br>FONO</b></span>
             <p><a href="#menu" class="w3-button w3-xxlarge w3-black texto">Que hay de comer?</a></p>
         </div>
     </header>
 
     <!-- Menu Container -->
-    <div class="w3-container w3-black w3-padding-64 w3-xxlarge" id="menu">
+    <div class="w3-container w3-yellow w3-padding-64 w3-xxlarge" id="menu">
         <div class="w3-content">
 
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">El MENU</h1>
@@ -183,7 +183,7 @@
     </div>
 
     <!-- About Container -->
-    <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
+    <div class="w3-container w3-padding-64 w3-red w3-xlarge" id="about">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">About</h1>
             <p>The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet, consectetur
@@ -216,7 +216,7 @@
     <img src="images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
 
     <!-- Contact -->
-    <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
+    <div class="w3-container w3-padding-64 w3-yellow w3-xlarge">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contact</h1>
             <p>Find us at some address at some place or call us at 05050515-122330</p>
