small changes fonts

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="w3-display-middle w3-center">
             <span class="w3-text-white w3-hide-small w3-red"
                 style="font-size:100px;;">POLLO<br>FONO</span>
-            <span class="w3-text-white w3-hide-large w3-hide-medium"
+            <span class="w3-text-white w3-hide-large w3-hide-medium w3-red"
                 style="font-size:60px"><b>POLLO<br>FONO</b></span>
             <p><a href="#menu" class="w3-button w3-xxlarge w3-black texto">Que hay de comer?</a></p>
         </div>
