--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 <body>
 
     <!-- Navbar (sit on top) -->
-    <div class="w3-top w3-hide-small">
+    <div class="w3-top">
         <div class="w3-bar w3-xlarge w3-yellow w3-opacity w3-hover-opacity-off" id="myNavbar">
             <a href="#" class="w3-bar-item w3-button">INICIO</a>
             <a href="#menu" class="w3-bar-item w3-button">MENU</a>
-            <a href="#about" class="w3-bar-item w3-button">NOSOTROS</a>
-            <a href="#myMap" class="w3-bar-item w3-button">CONTACTO</a>
+            <a href="#nosotros" class="w3-bar-item w3-button">NOSOTROS</a>
+            <a href="#contacto" class="w3-bar-item w3-button">CONTACTO</a>
         </div>
     </div>
 
@@ -226,7 +226,7 @@
         </div>
 
     </div>
-    <div class="w3-container w3-padding-64 w3-yellow w3-xlarge" id="about">
+    <div class="w3-container w3-padding-64 w3-yellow w3-xlarge" id="nosotros">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Nosotros</h1>
             <p>Pollería artesanal. Con saber de barrio. Pruébalo con nuestro ají y arroz chaufa, tequeños o alitas bbq.
@@ -261,7 +261,7 @@
 
 
     <!-- Contact -->
-    <div class="w3-container w3-padding-64 w3-red w3-xlarge">
+    <div class="w3-container w3-padding-64 w3-red w3-xlarge" id="contacto">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contacto</h1>
             <p>Find us at some address at some place or call us at 05050515-122330</p>
@@ -286,8 +286,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                class="w3-hover-text-green">w3.css</a></p>
+        <p>Powered by Jose Burga el CEO de Pollofono</a></p>
     </footer>
 
     <script>
